<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentContainer"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:hintEnabled="true"
                android:imeOptions="actionNext"
                android:maxLines="1"
                app:hintAnimationEnabled="true"
                android:id="@+id/editTextContainer" app:layout_constraintHorizontal_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent"
                                                                     android:id="@+id/editText"
                                                                     android:layout_height="match_parent"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp" tools:srcCompat="@drawable/ic_valid"
                android:id="@+id/underlineIndicator"
                app:layout_constraintTop_toTopOf="@+id/editTextContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/editTextContainer" android:layout_marginBottom="27dp"
                android:visibility="invisible"/>


        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:id="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/editTextContainer"
                app:layout_constraintEnd_toEndOf="@+id/editTextContainer"
                app:layout_constraintTop_toBottomOf="@+id/editTextContainer"
                app:layout_constraintBottom_toBottomOf="parent" android:visibility="invisible"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/auxTextView"
                tools:text="helper msg" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextContainer"
                app:layout_constraintStart_toStartOf="@+id/editTextContainer"
                app:layout_constraintEnd_toStartOf="@+id/underlineIndicator"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp" tools:srcCompat="@drawable/ic_valid"
                android:id="@+id/outlineIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/editTextContainer"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintTop_toBottomOf="@+id/editTextContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>